<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:fitsSystemWindows="true"
        tools:context=".ConnectActivity">
    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="@dimen/bigAppBarHeight"
                android:background="?attr/colorPrimaryDark"
                android:theme="?attr/actionBarTheme"
                android:minHeight="?attr/actionBarSize"
                android:id="@+id/bigTitleToolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:text="@string/appName"
                    android:gravity="center"
                    android:autoSizeTextType="uniform"/>
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="@dimen/genericUIMediumWidth"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="100dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/genericHeightSmall"
                        android:layout_marginBottom="@dimen/genericMargin"
                        android:background="@color/white"
                        android:inputType="textNoSuggestions"
                        android:text="@string/loginFieldDefaultText"
                        android:gravity="center_vertical|start"
                        android:autoSizeTextType="uniform"
                        android:autofillHints="@string/loginFieldHint"
                        android:hint="@string/loginFieldHint"
                        android:id="@+id/connectLoginField"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/genericHeightSmall"
                        android:layout_marginBottom="@dimen/genericMargin"
                        android:background="@color/white"
                        android:inputType="textPassword"
                        android:text=""
                        android:gravity="center_vertical|start"
                        android:autoSizeTextType="uniform"
                        android:autofillHints="@string/passwordFieldHint"
                        android:hint="@string/passwordFieldHint"
                        android:id="@+id/connectPasswordField"/>
                <Button
                        android:text="@string/loginButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/genericHeightSmall"
                        android:layout_marginTop="@dimen/genericMargin"
                        android:layout_marginBottom="@dimen/genericMargin"
                        android:background="@color/accent"
                        android:id="@+id/connectLoginButton"/>
                <Button
                        android:text="@string/registerButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/genericHeightSmall"
                        android:background="@color/accent"
                        android:id="@+id/connectRegisterButton"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.constraintlayout.widget.ConstraintLayout>