<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:fitsSystemWindows="true"
    tools:context=".RegisterActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/bigAppBarHeight"
            android:background="?attr/colorPrimaryDark"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/bigTitleToolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:text="@string/appName"
                android:gravity="center"
                android:autoSizeTextType="uniform"/>
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="@dimen/genericUIMediumWidth"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/genericHeightSmall"
                    android:layout_marginBottom="@dimen/genericMargin"
                    android:gravity="center_vertical|start"
                    android:autoSizeTextType="uniform"
                    android:autofillHints="@string/emailCheckCodeFieldHint"
                    android:hint="@string/emailFieldHint"
                    android:inputType="number"
                    android:id="@+id/emailCheckCodeField"/>

                <Button
                    android:text="@string/pursueButtonText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/genericHeightSmall"
                    android:background="@color/accent"
                    android:onClick="provideEmailCheckCode"
                    android:id="@+id/registerSecondStepButton"/>
            </LinearLayout>

            <TextView
                android:id="@+id/dialogBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@string/emailCheckCodeMessage"
                android:textColor="@color/dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.constraintlayout.widget.ConstraintLayout>